Removed s to revert back to original and working version

--- a/WD11P_EXERCISE11_GESULGON.HTML
+++ b/WD11P_EXERCISE11_GESULGON.HTML
@@ -306,7 +306,7 @@
                             <div class="card g-2 px-2 py-3 my-2" style="width: 18rem;">
                               <img src="img/one-piece.jpg" class="card-img-top img-fluid" alt="...">
                               <div class="card-body">
-                                <h5 class="card-title fw-bold">One Pieces</h5>
+                                <h5 class="card-title fw-bold">One Piece</h5>
                                 <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi cum maxime corrupti mollitia, hic, itaque ad sapiente vitae nostrum quis modi odit seq</p>
                                 <a href="#" class="btn btn-primary d-flex justify-content-center">Watch now!</a>
                               </div>
